# model-training-framework

./: .git-commit-msg-PR2.txt  .git-commit-msg-PR3.txt  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  LICENSE.md  MANIFEST.in  OBSERVABILITY.md  PR_DESCRIPTION.md  README.md  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  verify_dependencies.py
.circleci/: config.yml
.codex/: cleanup_policy.md  meta_reviewer.md  reviewer_alignment.md  reviewer_correctness.md  reviewer_documentation.md  reviewer_performance.md
.github/workflows/: ci.yml  codex-multi-review.yml
.qoder/quests/: demo-restructure.md  model-training-framework.md  ruff-github-workflow.md
demo/: README.md
demo/example1_beginner_local/: README.md  basic_model_training.py  multi_loader_training.py
demo/example1_beginner_local/config_examples/: mnist_config.yaml  multi_loader_config.yaml  sampling_strategies.yaml  simple_config.yaml
demo/example2_intermediate_hpc/: README.md  config.py  distributed_train_script.py  distributed_training.py  hyperparameter_optimization.py  orchestrate.py  slurm_template.sh  train_script.py
demo/example2_intermediate_hpc/configs/: distributed_config.yaml  grid_search_config.yaml  slurm_template.sh
demo/example2_intermediate_hpc/utils/: job_monitoring.py  result_analysis.py
demo/example3_advanced_production/: README.md  fault_tolerant_training.py
demo/example3_advanced_production/configs/: preemption_config.yaml  production_config.yaml
demo/example3_advanced_production/custom_components/: custom_trainer.py
demo/example3_advanced_production/deployment/: job_scheduler.py
demo/example3_production/: README.md  clean.sh  config.py  data.py  model.py  orchestrate.py  train_script.py
docs/: ADVANCED_FEATURES.md  API.md  CONFIGURATION.md  DATALOADER_BEST_PRACTICES.md  HOOKS.md  INSTALLATION.md  MIGRATION.md  MULTI_DATALOADER.md  OBSERVABILITY.md  QUICKSTART.md  checkpoint_format_v1.md  codex-multi-review.md  observability.md
examples/: README.md  basic_training.py  custom_trainer.py  grid_search.py  preemption_handling.py  slurm_batch.py
model_training_framework/: README.md  __init__.py  core.py  py.typed  requirements.txt  setup.py
model_training_framework/config/: __init__.py  grid_search.py  manager.py  naming.py  registry.py  schemas.py  validators.py
model_training_framework/slurm/: __init__.py  git_ops.py  launcher.py  monitor.py  templates.py
model_training_framework/tests/: __init__.py  conftest.py
model_training_framework/tests/config/: __init__.py  test_config.py  test_grid_preserves_sections.py  test_grid_search_advanced.py  test_naming_improvements.py  test_null_config_handling.py
model_training_framework/tests/slurm/: __init__.py  test_slurm.py
model_training_framework/tests/trainer/: __init__.py  test_amp_bf16_training.py  test_checkpoint_save_restore_model_only.py  test_dataloader_exhaustion_handling.py  test_dataloader_manager.py  test_ddp_acceptance.py  test_ddp_multi_process.py  test_gradient_accumulation.py  test_iterable_dataset_fault_tolerance_errors.py  test_iterable_dataset_fault_tolerance_simple.py  test_metrics_aggregation_modes.py  test_metrics_aggregation_wiring.py  test_metrics_manager.py  test_optimizer_step_tracking.py  test_resume_mid_epoch_acceptance.py  test_runtime_profiling.py  test_scheduler_hamilton_allocation.py  test_trainer.py  test_trainer_auto_resume_precedence.py  test_trainer_edge_cases.py  test_trainer_hooks.py  test_trainer_loggers.py  test_trainer_multi.py  test_trainer_multi_dataloader.py  test_trainer_utils.py
model_training_framework/tests/utils/: __init__.py  test_utils.py
model_training_framework/trainer/: __init__.py  checkpoints.py  config.py  core.py  dataset_validation.py  hooks.py  loggers.py  metrics.py  multi_dataloader.py  states.py  utils.py
model_training_framework/utils/: __init__.py  data_structures.py  logging.py  path_utils.py  validation.py
